Update host IP and add new Modbus entries

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,7 +1,7 @@
 modbus:
   - name: sma-sr_wr
     type: tcp
-    host: 192.168.178.181
+    host: 192.168.10.2
     port: 502
     delay: 2
     message_wait_milliseconds: 60
@@ -17,3 +17,32 @@ modbus:
         address: 30953
         #count: 2
         scale: 0.1
+      - name: SMA-STP-SE_Inverter_Power_Limit
+        slave: 3
+        address: 41255
+        data_type: int16
+        scan_interval: 60
+      - name: SMA-STP-SE_30881_Netzanbindung_der_PV-Anlage
+        slave: 3
+        address: 30881
+        data_type: uint32
+      - name: SMA-STP-SE_30217_Netz_Schuetz
+        slave: 3
+        address: 30217
+        data_type: uint32
+      - name: SMA-STP-SE_33003_Betriebsstatus
+        slave: 3
+        address: 33003
+        data_type: uint32
+      - name: SMA-STP-SE_40187_Batterie_Nennkapazitaet
+        slave: 3
+        address: 40187
+        data_type: uint32
+      - name: SMA-STP-SE_40723_Batterie_Minimale_Breite_Ersatzstrom
+        slave: 3
+        address: 40723
+        data_type: uint32
+      - name: SMA-STP-SE_31061_Steuerung verfügbar
+        slave: 3
+        address: 31061
+        data_type: uint32
